--- a/src/App.css
+++ b/src/App.css
@@ -216,6 +216,8 @@
 .cards-container {
   display: flex;
   justify-content: center;
+  align-items: 'center';
+  grid-auto-rows: auto;
   gap: 20px;
   /* Espacio entre las tarjetas */
 }
@@ -223,26 +225,20 @@
 .card {
   background-color: 'transparent';
   border:#32cd32 solid 2px;
-  /* Borde suave */
   border-radius: 10px;
-  /* Bordes redondeados */
-  padding: 1em;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  /* Sombra suave */
-  width: 350px;
-  height: 150px;
-  /* Ancho de las tarjetas */
+  width: 500px;
+  height: 'auto';
+  margin:5px;
+  padding: 5px;
 }
 
 .card h2 {
-  margin-bottom: 10px;
   color: #FFEBED ;
-  /* Color del título de la tarjeta */
 }
 
 .card p {
   color: #FFEBED;
-  /* Color del texto de la tarjeta */
 }
 
 .cardblack {
@@ -454,7 +450,7 @@
   color: whitesmoke;
   text-align: center;
   transition: all 0.8s ease-in-out;
-  font-size: 2em;
+  font-size: 1.5em;
   font-weight: 600;
 }
 
@@ -952,17 +948,17 @@
 .title {
   color: #32cd32;
   font-weight: 100;
-  font-size: 2em;
+  font-size: 1.5em;
   text-align: center;
 }
 
-.title:hover {
+/* .title:hover {
   color: #920e0e;
   font-weight: 100;
   font-size: 2em;
   text-align: center;
   cursor: pointer;
-}
+} */
 .titlewhite {
   color: #FFEBED;
   font-weight: 100;
@@ -979,13 +975,13 @@
   text-align: center;
 }
 
-.title:hover {
+/* .title:hover {
   color:#ff001e;
   font-weight: 100;
   font-size: 2em;
   text-align: center;
   cursor: pointer;
-}
+} */
 
 .titles {
   color: #32cd32;
