--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  user-select: none;
+  -webkit-user-select: none; /* para Safari */
+  -moz-user-select: none;    /* para Firefox */
+  caret-color: transparent;  /* oculta la "ratita" */
+
 }
 
 .App-logo {
@@ -43,6 +48,10 @@
 .App {
   text-align: center;
   overflow: hidden;
+  user-select: none;
+  -webkit-user-select: none; /* para Safari */
+  -moz-user-select: none;    /* para Firefox */
+  caret-color: transparent;  /* oculta la "ratita" */
 }
 
 .AppBlack {
@@ -52,16 +61,24 @@
   background-blend-mode: color-burn;
   display: flexbox;
   white-space: pre-line;
+    user-select: none;
+  -webkit-user-select: none; /* para Safari */
+  -moz-user-select: none;    /* para Firefox */
+  caret-color: transparent;  /* oculta la "ratita" */
 }
 
 .AppRed {
   background-color: #f7e5e5;
   opacity: 0.9;
   background-image: radial-gradient(circle at center center, #ff6060, #ff585898),
-    repeating-radial-gradient(circle at center center, #fd5959, #32cd32e1, 1900px, transparent 800px, transparent 400px);
+    repeating-radial-gradient(circle at center center, #fd5959, #fffe1, 1900px, transparent 800px, transparent 400px);
   background-blend-mode: color-burn;
   display: flexbox;
   white-space: pre-line;
+    user-select: none;
+  -webkit-user-select: none; /* para Safari */
+  -moz-user-select: none;    /* para Firefox */
+  caret-color: transparent;  /* oculta la "ratita" */
 }
 
 .AppWhite {
@@ -69,6 +86,10 @@
   opacity: 0.9;
   display: flexbox;
   white-space: pre-line;
+    user-select: none;
+  -webkit-user-select: none; /* para Safari */
+  -moz-user-select: none;    /* para Firefox */
+  caret-color: transparent;  /* oculta la "ratita" */
 }
 
 /* .AppWhite:hover {
@@ -114,22 +135,23 @@
 /*  Button  */
 
 .button {
-  background-color: #32cd32;
+  background-color: #fff;
   color: #000000;
   font-size: 1.1em;
   border: none;
   width: 10em;
   border-radius: 20px;
-  padding: 5px;
+  padding: 3px;
   cursor: pointer;
   text-decoration: none;
   transition: transform 1s ease-in-out;
   align-self: center;
   align-items: center;
+  margin: 0px 5px;
 }
 
 .button:hover {
-  background-color: #32cd32;
+  background-color: #fff;
   color: 'transparent';
   border: none;
   border-radius: 20px;
@@ -163,7 +185,7 @@
 }
 
 .buttonblack {
-  background-color: #32cd32;
+  background-color: #fff;
   color: black;
   font-weight: 100;
   font-size: 1em;
@@ -178,7 +200,7 @@
 }
 
 .buttonblack:hover {
-  background-color: #32cd32;
+  background-color: #fff;
   color: 'transparent';
   font-weight: 100;
   font-size: 1em;
@@ -194,7 +216,7 @@
 
 @media(max-width:700px){
 .button {
-  background-color: #32cd32;
+  background-color: #fff;
   color: #000;
   font-size: 1em;
   border: none;
@@ -208,7 +230,7 @@
 }
 
 .button:hover {
-  background-color: #32cd32;
+  background-color: #fff;
   color: 'transparent';
   font-weight: 100;
   font-size: 1em;
@@ -244,7 +266,7 @@
 
 .card {
   background-color: 'transparent';
-  border:#32cd32 solid 2px;
+  border:#fff solid 2px;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   width: 500px;
@@ -262,7 +284,7 @@
 }
 
 .cardblack {
-  background-color: #32cd32;
+  background-color: #fff;
   border:none;
   /* Borde suave */
   border-radius: 8px;
@@ -293,15 +315,15 @@
 }
 
 .cards .red {
-  background-color: #32cd324d;
+  background-color: #fff4d;
 }
 
 .cards .blue {
-  background-color: #32cd324d;
+  background-color: #fff4d;
 }
 
 .cards .green {
-  background-color: #32cd324d;
+  background-color: #fff4d;
 }
 
 .cards .card {
@@ -351,7 +373,7 @@
 /*  Circle  */
 
 .circle {
-  background-color: #32cd32;
+  background-color: #fff;
   height: 0.3em;
   width: 0.3em;
   border: white 2px;
@@ -433,7 +455,7 @@
   transform: translateY(-50%);
   background-color: transparent;
   border: none;
-  color: #32cd32;
+  color: #fff;
   cursor: pointer;
   align-self: center;
 }
@@ -456,7 +478,7 @@
   transform: translateY(-50%);
   background-color: transparent;
   border: none;
-  color: #32cd32;
+  color: #fff;
   cursor: pointer;
   align-self: center;
 }
@@ -499,13 +521,13 @@
 }
 
 .tableheader {
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   font-size: 1em;
 }
 
 .tableheader:hover {
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   font-size: 1em;
   cursor: pointer;
@@ -535,7 +557,7 @@
 }
 
 .textss:hover {
-  color: #32cd32;
+  color: #fff;
   /* font-weight: 100; */
   text-align: center;
   font-size: 0.7em;
@@ -572,42 +594,42 @@
   cursor: pointer;
 }
 .textgreen {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   text-align: center;
   font-size: 1em;
 }
 
 .textgreen:hover {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   text-align: center;
   font-size: 1em;
   cursor: pointer;
 }
 .textgreens {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   text-align: center;
   font-size: 0.6em;
 }
 
 .textgreens:hover {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   text-align: center;
   font-size: 0.6em;
   cursor: pointer;
 }
 .textred {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   text-align: center;
   font-size: 1em;
 }
 
 .textred:hover {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   text-align: center;
   font-size: 1em;
@@ -629,14 +651,14 @@
 }
 
 .textblue {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   text-align: center;
   font-size: 1em;
 }
 
 .textblue:hover {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   text-align: center;
   font-size: 1em;
@@ -665,8 +687,8 @@
   text-align: center;
   font-size: 1.4em;
   transition: color 0.5s ease;
-  /* color: #32cd32; */
-  color: #32cd32;
+  /* color: #fff; */
+  color: #fff;
   text-align: center;
   font-size: 1em;
   cursor: pointer;
@@ -676,7 +698,7 @@
   text-align: center;
   font-size: 1.4em;
   transition: color 0.5s ease;
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   font-size: 1em;
   cursor: pointer;
@@ -686,7 +708,7 @@
   text-align: center;
   font-size: 1.4em;
   transition: color 0.5s ease;
-  /* color: #32cd32; */
+  /* color: #fff; */
   color: whitesmoke;
   text-align: center;
   font-size: 1em;
@@ -720,14 +742,14 @@
   width: 1.5em;
   height: 1.5em;
   transition: all 0.8s ease-in-out;
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   cursor: pointer;
 }
 
 .icon:hover {
   transform: scale(1.1);
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   cursor: pointer;
 }
@@ -735,13 +757,13 @@
   width: 1.5em;
   height: 1.5em;
   transition: all 0.8s ease-in-out;
-  color: #32cd32;
+  color: #fff;
   cursor: pointer;
 }
 
 .iconclose:hover {
   transform: scale(1.1);
-  color: #32cd32;
+  color: #fff;
   cursor: pointer;
 }
 
@@ -767,7 +789,7 @@
   width: 4em;
   height: 4em;
   transition: all 0.8s ease-in-out;
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   cursor: pointer;
 }
@@ -776,7 +798,7 @@
   width: 4em;
   height: 4em;
   transform: scale(1.1);
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   cursor: pointer;
 }
@@ -785,7 +807,7 @@
   width: 1.2em;
   height: 1.2em;
   transition: all 0.8s ease-in-out;
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   cursor: pointer;
 }
@@ -794,7 +816,7 @@
   width: 1.2em;
   height: 1.2em;
   transform: scale(1.1);
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   cursor: pointer;
 }
@@ -803,7 +825,7 @@
   width: 1.5em;
   height: 1.5em;
   transition: all 0.8s ease-in-out;
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   cursor: pointer;
 }
@@ -812,7 +834,7 @@
   width: 1.2em;
   height: 1.2em;
   transform: scale(1.1);
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   cursor: pointer;
 }
@@ -857,7 +879,7 @@
   width: 1.2em;
   height: 1.2em;
   transition: all 0.8s ease-in-out;
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   cursor: pointer;
 }
@@ -866,7 +888,7 @@
   width: 1.2em;
   height: 1.2em;
   transform: scale(1.1);
-  color: #32cd32;
+  color: #fff;
   text-align: center;
   cursor: pointer;
 }
@@ -900,8 +922,8 @@
 }
 
 .item:hover {
-  color: #32cd32;
-  text-shadow: 0 0 8px #32cd32, 0 0 16px #32cd32, 0 0 24px #32cd32;
+  color: #fff;
+  text-shadow: 0 0 8px #fff, 0 0 16px #fff, 0 0 24px #fff;
 }
 
 /*  Logo  */
@@ -941,7 +963,7 @@
 .map:hover {
   width: 600px;
   height: 180px;
-  border: #32cd32 solid 2px;
+  border: #fff solid 2px;
     transform: scale(1.5);
   /* border-radius: 10px; */
 }
@@ -971,7 +993,7 @@
 .form {
   background-color: transparent;
   border-radius: 10px;
-  border: solid 2px #32cd32;
+  border: solid 2px #fff;
   height: auto;
   width: auto;
   padding: 20px;
@@ -981,7 +1003,7 @@
 .input {
   background-color: transparent;
   border: none;
-  border-bottom: solid 2px #32cd32;
+  border-bottom: solid 2px #fff;
   height: auto;
   width: auto;
 }
@@ -989,36 +1011,36 @@
 .inputred {
   border-radius: 20px;
   background-color: transparent;
-  border: solid #32cd32;
-  color: #32cd32;
+  border: solid #fff;
+  color: #fff;
   height: auto;
   width: auto;
 }
 .inputred::placeholder {
 
-  color: #32cd32;
+  color: #fff;
 
 }
 
 .inputredlogin {
   border-radius: 20px;
   background-color: transparent;
-  border: solid #32cd32;
-  color: #32cd32;
+  border: solid #fff;
+  color: #fff;
   height: auto;
   width: auto;
   padding: 10px;
 }
 .inputredlogin::placeholder {
 
-  color: #32cd32;
+  color: #fff;
 
 }
 
 .inputs {
   background-color: transparent;
   border: none;
-  border-bottom: solid 2px #32cd32;
+  border-bottom: solid 2px #fff;
   height: auto;
   width: 3em;
 
@@ -1047,7 +1069,7 @@
 /*  Title  */
 
 .title {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   font-size: 1.5em;
   text-align: center;
@@ -1085,7 +1107,7 @@
 } */
 
 .titles {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   font-size: 1em;
   text-align: center;
@@ -1108,7 +1130,7 @@
 
 
 .titleRed:hover {
-  color: #32cd32;
+  color: #fff;
   font-weight: 100;
   text-align: center;
   font-size: 2em;
@@ -1153,7 +1175,7 @@
 .footeritem {
   list-style: none;
   margin-left: 20px;
-  color: #32cd32;
+  color: #fff;
   text-transform: uppercase;
   cursor: pointer;
   transition: color 0.3s ease;
@@ -1162,7 +1184,7 @@
 }
 
 .footeritem:hover {
-  color: #32cd32;
+  color: #fff;
 }
 
 .footeritemred {
@@ -1246,7 +1268,7 @@
 
 .navbaritem {
   margin-left: 20px;
-  color: #32cd32;
+  color: #fff;
   text-transform: uppercase;
   cursor: pointer;
   border-radius: 20px;
@@ -1257,7 +1279,19 @@
 
 .navbaritem:hover {
   color: whitesmoke;
-  text-shadow: 0 0 8px #32cd32, 0 0 16px #32cd32, 0 0 24px #32cd32;
+  text-shadow: 0 0 8px #fff, 0 0 16px #fff, 0 0 24px #fff;
+}
+.navbaritemselected {
+  color: whitesmoke;
+  text-shadow: 0 0 8px #fff, 0 0 16px #fff, 0 0 24px #fff;
+  margin-left: 20px;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+  border-radius: 20px;
+  font-size: 1.1em;
+  transition: color 0.8s ease;
+  font-weight:750;
 }
 
 
@@ -1281,7 +1315,7 @@
 
 .navbaritemwhite {
   margin-left: 20px;
-  color: #32cd32;
+  color: #fff;
   text-transform: uppercase;
   cursor: pointer;
   font-size: 1em;
@@ -1290,7 +1324,7 @@
 
 .navbaritemred {
   margin-left: 20px;
-  color: '#32cd32';
+  color: '#fff';
   text-transform: uppercase;
   cursor: pointer;
   font-size: 1em;
@@ -1357,7 +1391,7 @@
 }
 
 .windowbutton {
-  background-color: #32cd32;
+  background-color: #fff;
   color: #fd5959;
   font-weight: 100;
   font-size: 1em;
@@ -1372,7 +1406,7 @@
 }
 
 .windowbutton:hover {
-  background-color: #32cd32;
+  background-color: #fff;
   color: #fd5959;
   font-weight: 100;
   font-size: 1em;
@@ -1407,7 +1441,7 @@
   background: none;
   border: none;
   cursor: pointer;
-  color: #32cd32;
+  color: #fff;
 }
 
 
@@ -1431,7 +1465,7 @@
     top: 50px;
     right: 10px;
     background-color:#000000d7;
-    border: 1px solid #32cd32;
+    border: 1px solid #fff;
     padding: 10px;
     border-radius: 4px;
   }
@@ -1448,7 +1482,7 @@
     top: 50px;
     right: 10px;
     background-color:whitesmoked7;
-    border: 1px solid #32cd32;
+    border: 1px solid #fff;
     padding: 10px;
     border-radius: 4px;
   }
@@ -1503,6 +1537,14 @@
       font-size: 14px; /* Reducir el tamaño de la fuente */
   }
 
+  .button-row {
+    display: flex;
+    justify-content: center; /* o 'start' o 'space-between' según prefieras */
+    flex-wrap: wrap; /* opcional, para que no se desborden en pantallas pequeñas */
+    gap: 10px; /* Espacio entre los botones */
+  }
+  
+
   /* Ocultar algunas columnas que no son esenciales en pantallas pequeñas */
   .table th:nth-child(5), .table td:nth-child(5),
   .table th:nth-child(7), .table td:nth-child(7),
@@ -1541,3 +1583,52 @@
 
   }
 
+
+  .tech-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 30px;
+    z-index: 2;
+    position: relative;
+  }
+  
+  .tech-block {
+    background-color: rgba(255, 255, 255, 0.05);
+    padding: 20px;
+    border-radius: 12px;
+    width: 260px;
+    text-align: center;
+  }
+  
+  .tech-block h3 {
+    color: white;
+    margin-bottom: 15px;
+    font-size: 1.2em;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+  
+  .tech-icons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+  }
+  
+  .tech-icons .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+    width: 70px;
+    font-size: 0.8em;
+    transition: transform 0.2s ease;
+  }
+  
+  .tech-icons .item:hover {
+    transform: scale(1.1);
+  }
+  
