--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
   background-color: #f7e5e5;
   opacity: 0.9;
   background-image: radial-gradient(circle at center center, #ff6060, #ff585898),
-    repeating-radial-gradient(circle at center center, #fd5959, #fffe1, 1900px, transparent 800px, transparent 400px);
+    repeating-radial-gradient(circle at center center, #fd5959, #fd5959 , 1900px, transparent 800px, transparent 400px);
   background-blend-mode: color-burn;
   display: flexbox;
   white-space: pre-line;
@@ -315,15 +315,15 @@
 }
 
 .cards .red {
-  background-color: #fff4d;
+  background-color: transparent;
 }
 
 .cards .blue {
-  background-color: #fff4d;
+  background-color: transparent;
 }
 
 .cards .green {
-  background-color: #fff4d;
+  background-color: transparent;
 }
 
 .cards .card {
@@ -1632,3 +1632,45 @@
     transform: scale(1.1);
   }
   
+.card {
+  position: relative;
+  width: 250px;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.5);
+  transition: transform 0.3s ease;
+}
+
+.card:hover {
+  transform: scale(1.03);
+}
+
+.card-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.65); /* Opacidad negra */
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  text-align: center;
+}
+
+.tip {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.second-text {
+  font-size: 0.9em;
+  line-height: 1.4;
+}
